--- a/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
+++ b/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,17 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No GPU found. Please use a GPU to train your neural network.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -345,20 +337,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test_text = range(50)\n",
     "# t_loader = batch_data(test_text, sequence_length=5, batch_size=10)\n",
@@ -378,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,19 +443,19 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 10])\n",
-      "tensor([[ 38,  39,  40,  41,  42,  43,  44,  45,  46,  47],\n",
-      "        [ 14,  15,  16,  17,  18,  19,  20,  21,  22,  23],\n",
-      "        [ 17,  18,  19,  20,  21,  22,  23,  24,  25,  26],\n",
-      "        [ 33,  34,  35,  36,  37,  38,  39,  40,  41,  42],\n",
-      "        [ 37,  38,  39,  40,  41,  42,  43,  44,  45,  46],\n",
-      "        [  4,   5,   6,   7,   8,   9,  10,  11,  12,  13],\n",
-      "        [ 22,  23,  24,  25,  26,  27,  28,  29,  30,  31],\n",
-      "        [  9,  10,  11,  12,  13,  14,  15,  16,  17,  18],\n",
-      "        [  2,   3,   4,   5,   6,   7,   8,   9,  10,  11],\n",
-      "        [ 35,  36,  37,  38,  39,  40,  41,  42,  43,  44]])\n",
+      "tensor([[ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10],\n",
+      "        [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9],\n",
+      "        [ 6,  7,  8,  9, 10, 11, 12, 13, 14, 15],\n",
+      "        [24, 25, 26, 27, 28, 29, 30, 31, 32, 33],\n",
+      "        [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
+      "        [11, 12, 13, 14, 15, 16, 17, 18, 19, 20],\n",
+      "        [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],\n",
+      "        [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18],\n",
+      "        [18, 19, 20, 21, 22, 23, 24, 25, 26, 27],\n",
+      "        [31, 32, 33, 34, 35, 36, 37, 38, 39, 40]], dtype=torch.int32)\n",
       "\n",
       "torch.Size([10])\n",
-      "tensor([ 48,  24,  27,  43,  47,  14,  32,  19,  12,  45])\n"
+      "tensor([11, 10, 16, 34, 20, 21, 40, 19, 28, 41], dtype=torch.int32)\n"
      ]
     }
    ],
@@ -524,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +514,7 @@
        "16"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,16 +548,20 @@
     "        # TODO: Implement function\n",
     "        # set class variables\n",
     "        \n",
-    "        self.embed = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        \n",
-    "        self.LSTM = nn.LSTM(len(self.chars), n_hidden, n_layers, dropout=dropout, batch_first=True)\n",
-    "        self.dropout = nn.Dropout(dropout)\n",
-    "        \n",
-    "        # define model layers\n",
     "        # from:  def __init__(self, vocab_size, output_size, embedding_dim, hidden_dim, n_layers, dropout=0.5):\n",
     "        self.output_size = output_size\n",
     "        self.n_layers = n_layers\n",
     "        self.hidden_dim = hidden_dim\n",
+    "        \n",
+    "        \n",
+    "        # layers excluding FC\n",
+    "        self.embed = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.LSTM = nn.LSTM(len(self.chars), n_hidden, n_layers, dropout=dropout, batch_first=True)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "        # define model layers\n",
+    "        \n",
+    "        \n",
     "                \n",
     "        self.fc1 = nn.Linear(embedding_dim, round(vocab_size*1.5))\n",
     "        self.fc2 = nn.Linear(round(vocab_size*1.5), vocab_size)\n",
@@ -590,11 +575,22 @@
     "        :param hidden: The hidden state        \n",
     "        :return: Two Tensors, the output of the neural network and the latest hidden state\n",
     "        \"\"\"\n",
-    "        # TODO: Implement function   \n",
     "        \n",
+    "        # :param nn_input: The input to the neural network\n",
+    "        batch_size = nn_input.size(0)\n",
+    "        # :param hidden: The hidden state  \n",
+    "        embeds = self.embedding(nn_input)\n",
+    "        \n",
+    "        # TODO: Implement function   \n",
     "        lstm_output, hidden = self.lstm(x, hidden)\n",
+    "        out = self.dropout(lstm_output)\n",
+    "        out = out.contiguous().view(-1, self.n_hidden)\n",
+    "        out = self.fc1(out)\n",
+    "        out = self.fc2(out)\n",
     "        \n",
     "        # return one batch of output word scores and the hidden state\n",
+    "        out = out.view(batch_size, -1, self.output_size)\n",
+    "        \n",
     "        return None, None\n",
     "    \n",
     "    \n",
@@ -1084,7 +1080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   },
   "widgets": {
    "state": {},
