--- a/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
+++ b/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -443,19 +443,19 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 10])\n",
-      "tensor([[ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10],\n",
-      "        [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9],\n",
-      "        [ 6,  7,  8,  9, 10, 11, 12, 13, 14, 15],\n",
-      "        [24, 25, 26, 27, 28, 29, 30, 31, 32, 33],\n",
-      "        [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
-      "        [11, 12, 13, 14, 15, 16, 17, 18, 19, 20],\n",
-      "        [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],\n",
-      "        [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18],\n",
-      "        [18, 19, 20, 21, 22, 23, 24, 25, 26, 27],\n",
-      "        [31, 32, 33, 34, 35, 36, 37, 38, 39, 40]], dtype=torch.int32)\n",
+      "tensor([[ 26,  27,  28,  29,  30,  31,  32,  33,  34,  35],\n",
+      "        [ 32,  33,  34,  35,  36,  37,  38,  39,  40,  41],\n",
+      "        [ 15,  16,  17,  18,  19,  20,  21,  22,  23,  24],\n",
+      "        [ 22,  23,  24,  25,  26,  27,  28,  29,  30,  31],\n",
+      "        [ 17,  18,  19,  20,  21,  22,  23,  24,  25,  26],\n",
+      "        [  3,   4,   5,   6,   7,   8,   9,  10,  11,  12],\n",
+      "        [ 33,  34,  35,  36,  37,  38,  39,  40,  41,  42],\n",
+      "        [ 29,  30,  31,  32,  33,  34,  35,  36,  37,  38],\n",
+      "        [  4,   5,   6,   7,   8,   9,  10,  11,  12,  13],\n",
+      "        [ 23,  24,  25,  26,  27,  28,  29,  30,  31,  32]])\n",
       "\n",
       "torch.Size([10])\n",
-      "tensor([11, 10, 16, 34, 20, 21, 40, 19, 28, 41], dtype=torch.int32)\n"
+      "tensor([ 36,  42,  25,  32,  27,  13,  43,  39,  14,  33])\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "16"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,11 +525,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "\n",
@@ -556,16 +562,23 @@
     "        \n",
     "        # layers excluding FC\n",
     "        self.embed = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        self.LSTM = nn.LSTM(len(self.chars), n_hidden, n_layers, dropout=dropout, batch_first=True)\n",
-    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, n_layers, dropout=dropout, batch_first=True)\n",
+    "        \n",
+    "        # from LSTM solution\n",
+    "        # len(self.chars) == embedding size, because instead of character values (word2vec count style)\n",
+    "        # use embedding layer instead to catch word relationshsips\n",
+    "        # self.lstm = nn.LSTM(len(self.chars), n_hidden, n_layers, dropout=dropout, batch_first=True)\n",
+    "        \n",
     "        \n",
     "        # define model layers\n",
+    "        # just a little bit more complexity\n",
     "        \n",
+    "        self.fc1 = nn.Linear(hidden_dim, round(vocab_size*1.3))\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.fc2 = nn.Linear(round(vocab_size*1.3), output_size)\n",
     "        \n",
-    "                \n",
-    "        self.fc1 = nn.Linear(embedding_dim, round(vocab_size*1.5))\n",
-    "        self.fc2 = nn.Linear(round(vocab_size*1.5), vocab_size)\n",
-    "        self.log_softmax = nn.LogSoftmax(dim=1)\n",
+    "        # keeping, copied from prior solution notebooks\n",
+    "        # self.log_softmax = nn.LogSoftmax(dim=1)\n",
     "    \n",
     "    \n",
     "    def forward(self, nn_input, hidden):\n",
@@ -578,20 +591,25 @@
     "        \n",
     "        # :param nn_input: The input to the neural network\n",
     "        batch_size = nn_input.size(0)\n",
-    "        # :param hidden: The hidden state  \n",
-    "        embeds = self.embedding(nn_input)\n",
     "        \n",
-    "        # TODO: Implement function   \n",
+    "        # :param hidden: The hidden state  \n",
+    "        x = self.embed(nn_input)\n",
+    "        \n",
+    "        # TODO: Implement function\n",
+    "        # make embedding layer, pass through lstm layer, pass through fully connected, get the last output and most\n",
+    "        # the final hidden layer\n",
+    "        \n",
     "        lstm_output, hidden = self.lstm(x, hidden)\n",
-    "        out = self.dropout(lstm_output)\n",
-    "        out = out.contiguous().view(-1, self.n_hidden)\n",
+    "        out = lstm_output.contiguous().view(-1, self.hidden_dim)\n",
     "        out = self.fc1(out)\n",
+    "        out = self.dropout(out)\n",
     "        out = self.fc2(out)\n",
     "        \n",
     "        # return one batch of output word scores and the hidden state\n",
     "        out = out.view(batch_size, -1, self.output_size)\n",
+    "        out = out[:, -1]\n",
     "        \n",
-    "        return None, None\n",
+    "        return out, hidden\n",
     "    \n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
@@ -603,8 +621,19 @@
     "        # Implement function\n",
     "        \n",
     "        # initialize hidden state with zero weights, and move to GPU if available\n",
+    "        weight = next(self.parameters()).data\n",
     "        \n",
-    "        return None\n",
+    "        # https://www.programiz.com/python-programming/methods/built-in/next\n",
+    "        \n",
+    "        if (train_on_gpu):\n",
+    "            hidden = (weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().cuda(),\n",
+    "                      weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().cuda())\n",
+    "        else:\n",
+    "            hidden = (weight.new(self.n_layers, batch_size, self.hidden_dim).zero_(),\n",
+    "                      weight.new(self.n_layers, batch_size, self.hidden_dim).zero_())\n",
+    "        \n",
+    "        # LSTM solution file\n",
+    "        return hidden\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -630,11 +659,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def forward_back_prop(rnn, optimizer, criterion, inp, target, hidden):\n",
     "    \"\"\"\n",
@@ -648,13 +683,39 @@
     "    \"\"\"\n",
     "    \n",
     "    # TODO: Implement Function\n",
-    "    \n",
     "    # move data to GPU, if available\n",
+    "    \n",
+    "    if (train_on_gpu):\n",
+    "        rnn.cuda()\n",
+    "    \n",
+    "    # attribution: (have to find website / github)\n",
+    "    # did not know how to write up the h(istorical)-memory correctly, code not mine\n",
+    "    \n",
+    "    h = tuple ([i.data for i in hidden])\n",
+    "    \n",
+    "    rnn.zero_grad()\n",
+    "    \n",
+    "    if (train_on_gpu):    \n",
+    "        X, y = inp.cuda(), target.cuda()\n",
+    "    else:\n",
+    "        X, y = inp, target\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    # running through standard\n",
+    "    \n",
+    "    y_hat, h = rnn (X, h)\n",
+    "    loss = criterion (y_hat, y)\n",
+    "    loss.backward ()\n",
+    "    \n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # perform backpropagation and optimization\n",
     "\n",
     "    # return the loss over a batch and the hidden state produced by our model\n",
-    "    return None, None\n",
+    "    return loss.item(), h\n",
     "\n",
     "# Note that these tests aren't completely extensive.\n",
     "# they are here to act as general checks on the expected outputs of your functions\n",
@@ -679,10 +740,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -744,18 +803,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trial and error record\n",
+    "1. n_seq=15 , n_batch=64, epochs=10, lr=0.005, n_vocab=n_output=len(vocab), n_embed=100, n_hidden=100, n_layers=3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
-    "sequence_length =   # of words in a sequence\n",
+    "sequence_length = 15 # of words in a sequence\n",
     "# Batch Size\n",
-    "batch_size = \n",
+    "batch_size = 64\n",
     "\n",
     "# data loader - do not change\n",
     "train_loader = batch_data(int_text, sequence_length, batch_size)"
@@ -763,32 +828,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Training parameters\n",
     "# Number of Epochs\n",
-    "num_epochs = \n",
+    "num_epochs = 10\n",
     "# Learning Rate\n",
-    "learning_rate = \n",
+    "learning_rate = 0.005 \n",
     "\n",
     "# Model parameters\n",
     "# Vocab size\n",
-    "vocab_size = \n",
+    "vocab_size = len (vocab_to_int)\n",
     "# Output size\n",
-    "output_size = \n",
+    "output_size = vocab_size\n",
     "# Embedding Dimension\n",
-    "embedding_dim = \n",
+    "embedding_dim = 100\n",
     "# Hidden Dimension\n",
-    "hidden_dim = \n",
+    "hidden_dim = 100\n",
     "# Number of RNN Layers\n",
-    "n_layers = \n",
+    "n_layers = 3\n",
     "\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 500"
+    "show_every_n_batches = 3000"
    ]
   },
   {
@@ -804,11 +867,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for 10 epoch(s)...\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "cuda runtime error (2) : out of memory at /opt/conda/conda-bld/pytorch_1524584710464/work/aten/src/THC/generic/THCStorage.cu:58",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-fc6fcf49d39c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# training the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mtrained_rnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_rnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_every_n_batches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# saving the trained model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-54bd9dc2f859>\u001b[0m in \u001b[0;36mtrain_rnn\u001b[0;34m(rnn, batch_size, optimizer, criterion, n_epochs, show_every_n_batches)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0;31m# forward, back prop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mforward_back_prop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m             \u001b[0;31m# record loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0mbatch_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-19-6350ae3cf868>\u001b[0m in \u001b[0;36mforward_back_prop\u001b[0;34m(rnn, optimizer, criterion, inp, target, hidden)\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/optim/adam.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     98\u001b[0m                     \u001b[0mdenom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_exp_avg_sq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eps'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m                     \u001b[0mdenom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexp_avg_sq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eps'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m                 \u001b[0mbias_correction1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mbeta1\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'step'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: cuda runtime error (2) : out of memory at /opt/conda/conda-bld/pytorch_1524584710464/work/aten/src/THC/generic/THCStorage.cu:58"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -1080,7 +1163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {},
