Udacity : main ipynb file updated
Summary : updated main .ipynb file
Changes : Switched from np.roll to slicing for data loader to improve memory
Tweaks : Changed fully connected layer dimensions for memory
Others : Started babysitting hyperparameters for training

--- a/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
+++ b/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +358,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_can't use NP.roll too much memory to have two arrays_"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,12 +385,13 @@
     "    \n",
     "    n_batches = len(words)//batch_size\n",
     "    words = words[:n_batches*batch_size]\n",
-    "    words_roll = np.roll (words, -1)\n",
     "    X, y = [], []\n",
     "    \n",
-    "    for idx in range (len(words)-batch_size):\n",
-    "        X.append (words[idx:idx+batch_size])\n",
-    "        y.append (words_roll[idx+batch_size-1])\n",
+    "    \n",
+    "    for i in range (len(words) - sequence_length):\n",
+    "        last = i + sequence_length\n",
+    "        X.append (words[i:last])\n",
+    "        y.append (words[last])\n",
     "    \n",
     "    data = TensorDataset(torch.from_numpy(np.asarray(X)), torch.from_numpy(np.asarray(y)))\n",
     "    data_loader = DataLoader(data, shuffle=True, batch_size=batch_size)\n",
@@ -435,27 +443,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10, 10])\n",
-      "tensor([[ 26,  27,  28,  29,  30,  31,  32,  33,  34,  35],\n",
-      "        [ 32,  33,  34,  35,  36,  37,  38,  39,  40,  41],\n",
-      "        [ 15,  16,  17,  18,  19,  20,  21,  22,  23,  24],\n",
-      "        [ 22,  23,  24,  25,  26,  27,  28,  29,  30,  31],\n",
-      "        [ 17,  18,  19,  20,  21,  22,  23,  24,  25,  26],\n",
-      "        [  3,   4,   5,   6,   7,   8,   9,  10,  11,  12],\n",
-      "        [ 33,  34,  35,  36,  37,  38,  39,  40,  41,  42],\n",
-      "        [ 29,  30,  31,  32,  33,  34,  35,  36,  37,  38],\n",
-      "        [  4,   5,   6,   7,   8,   9,  10,  11,  12,  13],\n",
-      "        [ 23,  24,  25,  26,  27,  28,  29,  30,  31,  32]])\n",
+      "torch.Size([10, 5])\n",
+      "tensor([[ 13,  14,  15,  16,  17],\n",
+      "        [ 37,  38,  39,  40,  41],\n",
+      "        [ 21,  22,  23,  24,  25],\n",
+      "        [ 44,  45,  46,  47,  48],\n",
+      "        [ 30,  31,  32,  33,  34],\n",
+      "        [  9,  10,  11,  12,  13],\n",
+      "        [ 28,  29,  30,  31,  32],\n",
+      "        [ 15,  16,  17,  18,  19],\n",
+      "        [  6,   7,   8,   9,  10],\n",
+      "        [  5,   6,   7,   8,   9]])\n",
       "\n",
       "torch.Size([10])\n",
-      "tensor([ 36,  42,  25,  32,  27,  13,  43,  39,  14,  33])\n"
+      "tensor([ 18,  42,  26,  49,  35,  14,  33,  20,  11,  10])\n"
      ]
     }
    ],
@@ -505,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +522,7 @@
        "16"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -573,9 +581,9 @@
     "        # define model layers\n",
     "        # just a little bit more complexity\n",
     "        \n",
-    "        self.fc1 = nn.Linear(hidden_dim, round(vocab_size*1.3))\n",
+    "        self.fc1 = nn.Linear(hidden_dim, round(hidden_dim*1.3))\n",
     "        self.dropout = nn.Dropout(dropout)\n",
-    "        self.fc2 = nn.Linear(round(vocab_size*1.3), output_size)\n",
+    "        self.fc2 = nn.Linear(round(hidden_dim*1.3), output_size)\n",
     "        \n",
     "        # keeping, copied from prior solution notebooks\n",
     "        # self.log_softmax = nn.LogSoftmax(dim=1)\n",
@@ -659,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,20 +815,33 @@
    "metadata": {},
    "source": [
     "### Trial and error record\n",
-    "1. n_seq=15 , n_batch=64, epochs=10, lr=0.005, n_vocab=n_output=len(vocab), n_embed=100, n_hidden=100, n_layers=3"
+    "1. __n_seq=15 , n_batch=64, epochs=10, lr=0.005, n_vocab=n_output=len(vocab), n_embed=100, n_hidden=100, n_layers=3__\n",
+    "    1. Result : `RuntimeError: cuda runtime error (2) : out of memory at /opt/conda/conda-bld/pytorch_1524584710464/work/aten/src/THC/generic/THCStorage.cu:58`\n",
+    "    2. Comment : Is this too much load for the memory?\n",
+    "2. __n_seq=10 , n_batch=256, epochs=1, lr=0.001, n_vocab=n_output=len(vocab), n_embed=100, n_hidden=100, n_layers=2__\n",
+    "    1. Comment : I just want to make sure this runs.\n",
+    "    2. Comment : After speaking with mentor, reducing batch size next iteration.\n",
+    "3. __n_seq=10 , n_batch=32, epochs=10, lr=0.001, n_vocab=n_output=len(vocab), n_embed=100, n_hidden=100, n_layers=2__\n",
+    "    1. Comment : This worked though, it wasn't hyper parameters but the model and generators causing the memory drain. Specifically I changed from using _np.roll_ for generating data_loader as I was using too much memory with the arrarys. I also weaned the fully connected layers to have less nodes.\n",
+    "    2. Was slow and hovered around 4.05, will be changing learning rate and looking up dynamic learning rates.\n",
+    "4. __n_seq=10 , n_batch=32, epochs=10, lr=0.005, n_vocab=n_output=len(vocab), n_embed=200, n_hidden=100, n_layers=2__\n",
+    "    1. Stopped at 4/10 epochs, LOSS ~= 4.5\n",
+    "5. __n_seq=16 , n_batch=64, epochs=10, lr=0.001, n_vocab=n_output=len(vocab), n_embed=200, n_hidden=100, n_layers=2__ \n",
+    "    1. Stopped at 3/10 epochs, LOSS ~= 4.2\n",
+    "6. __n_seq=8 , n_batch=32, epochs=10, lr=0.005, n_vocab=n_output=len(vocab), n_embed=200, n_hidden=200, n_layers=2__    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
-    "sequence_length = 15 # of words in a sequence\n",
+    "sequence_length = 8 # of words in a sequence\n",
     "# Batch Size\n",
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "\n",
     "# data loader - do not change\n",
     "train_loader = batch_data(int_text, sequence_length, batch_size)"
@@ -828,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,14 +865,14 @@
     "# Output size\n",
     "output_size = vocab_size\n",
     "# Embedding Dimension\n",
-    "embedding_dim = 100\n",
+    "embedding_dim = 300\n",
     "# Hidden Dimension\n",
-    "hidden_dim = 100\n",
+    "hidden_dim = 200\n",
     "# Number of RNN Layers\n",
-    "n_layers = 3\n",
+    "n_layers = 2\n",
     "\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 3000"
+    "show_every_n_batches = 5000"
    ]
   },
   {
@@ -867,28 +888,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training for 10 epoch(s)...\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "cuda runtime error (2) : out of memory at /opt/conda/conda-bld/pytorch_1524584710464/work/aten/src/THC/generic/THCStorage.cu:58",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-fc6fcf49d39c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# training the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mtrained_rnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_rnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_every_n_batches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# saving the trained model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-20-54bd9dc2f859>\u001b[0m in \u001b[0;36mtrain_rnn\u001b[0;34m(rnn, batch_size, optimizer, criterion, n_epochs, show_every_n_batches)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0;31m# forward, back prop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mforward_back_prop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m             \u001b[0;31m# record loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0mbatch_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-19-6350ae3cf868>\u001b[0m in \u001b[0;36mforward_back_prop\u001b[0;34m(rnn, optimizer, criterion, inp, target, hidden)\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/optim/adam.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     98\u001b[0m                     \u001b[0mdenom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_exp_avg_sq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eps'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m                     \u001b[0mdenom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexp_avg_sq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eps'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m                 \u001b[0mbias_correction1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mbeta1\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'step'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: cuda runtime error (2) : out of memory at /opt/conda/conda-bld/pytorch_1524584710464/work/aten/src/THC/generic/THCStorage.cu:58"
+      "Training for 10 epoch(s)...\n",
+      "Epoch:    1/10    Loss: 5.092236688137055\n",
+      "\n",
+      "Epoch:    1/10    Loss: 4.9064639373779295\n",
+      "\n",
+      "Epoch:    1/10    Loss: 4.8814420896530155\n",
+      "\n",
+      "Epoch:    1/10    Loss: 4.889260320854187\n",
+      "\n",
+      "Epoch:    1/10    Loss: 4.877668481779098\n",
+      "\n",
+      "Epoch:    2/10    Loss: 4.843870157999966\n",
+      "\n",
+      "Epoch:    2/10    Loss: 4.831747065782547\n",
+      "\n",
+      "Epoch:    2/10    Loss: 4.857559911727905\n",
+      "\n"
      ]
     }
    ],
