Update : main .ipynb file updated
Summary : updated main file, added LR step decay, tried new hyper-parameters, testing hook function for regularization

--- a/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
+++ b/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,9 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -337,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +459,19 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 5])\n",
-      "tensor([[ 13,  14,  15,  16,  17],\n",
-      "        [ 37,  38,  39,  40,  41],\n",
-      "        [ 21,  22,  23,  24,  25],\n",
-      "        [ 44,  45,  46,  47,  48],\n",
-      "        [ 30,  31,  32,  33,  34],\n",
-      "        [  9,  10,  11,  12,  13],\n",
-      "        [ 28,  29,  30,  31,  32],\n",
+      "tensor([[ 44,  45,  46,  47,  48],\n",
+      "        [  7,   8,   9,  10,  11],\n",
       "        [ 15,  16,  17,  18,  19],\n",
-      "        [  6,   7,   8,   9,  10],\n",
-      "        [  5,   6,   7,   8,   9]])\n",
+      "        [ 14,  15,  16,  17,  18],\n",
+      "        [ 23,  24,  25,  26,  27],\n",
+      "        [ 10,  11,  12,  13,  14],\n",
+      "        [  9,  10,  11,  12,  13],\n",
+      "        [ 12,  13,  14,  15,  16],\n",
+      "        [ 36,  37,  38,  39,  40],\n",
+      "        [ 40,  41,  42,  43,  44]])\n",
       "\n",
       "torch.Size([10])\n",
-      "tensor([ 18,  42,  26,  49,  35,  14,  33,  20,  11,  10])\n"
+      "tensor([ 49,  12,  20,  19,  28,  15,  14,  17,  41,  45])\n"
      ]
     }
    ],
@@ -513,35 +521,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hook implementation\n",
+    "\n",
+    "# def clipper(hook, min, max):\n",
+    "#    hook = hook.expand_as(hook)\n",
+    "#    hook.register_hook(lambda x: x.clamp(min, max))\n",
+    "#    return hook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16"
+       "\"\\nDON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\\n\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(12*1.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tests Passed\n"
-     ]
     }
    ],
    "source": [
@@ -549,7 +554,7 @@
     "\n",
     "class RNN(nn.Module):\n",
     "    \n",
-    "    def __init__(self, vocab_size, output_size, embedding_dim, hidden_dim, n_layers, dropout=0.5):\n",
+    "    def __init__(self, vocab_size, output_size, embedding_dim, hidden_dim, n_layers, dropout=0.5, grad_clip=None):\n",
     "        \"\"\"\n",
     "        Initialize the PyTorch RNN Module\n",
     "        :param vocab_size: The number of input dimensions of the neural network (the size of the vocabulary)\n",
@@ -566,11 +571,14 @@
     "        self.output_size = output_size\n",
     "        self.n_layers = n_layers\n",
     "        self.hidden_dim = hidden_dim\n",
+    "        # @hook\n",
+    "        # self.grad_clip = grad_clip\n",
     "        \n",
     "        \n",
     "        # layers excluding FC\n",
     "        self.embed = nn.Embedding(vocab_size, embedding_dim)\n",
     "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, n_layers, dropout=dropout, batch_first=True)\n",
+    "        # self.gru = nn.GRU()\n",
     "        \n",
     "        # from LSTM solution\n",
     "        # len(self.chars) == embedding size, because instead of character values (word2vec count style)\n",
@@ -607,15 +615,23 @@
     "        # make embedding layer, pass through lstm layer, pass through fully connected, get the last output and most\n",
     "        # the final hidden layer\n",
     "        \n",
-    "        lstm_output, hidden = self.lstm(x, hidden)\n",
-    "        out = lstm_output.contiguous().view(-1, self.hidden_dim)\n",
+    "        output, hidden = self.lstm(x, hidden)\n",
+    "        # output, hidden = self.gru(x, hidden)\n",
+    "        out = output.contiguous().view(-1, self.hidden_dim)\n",
     "        out = self.fc1(out)\n",
     "        out = self.dropout(out)\n",
     "        out = self.fc2(out)\n",
     "        \n",
+    "        hook = out\n",
+    "        # (https://blog.csdn.net/u012436149/article/details/69230136)\n",
+    "        # (https://docs.fast.ai/callbacks.hooks.html)\n",
+    "        \n",
+    "        # out = clipper (output, -1*self.grad_clip, self.grad_clip)\n",
+    "        \n",
     "        # return one batch of output word scores and the hidden state\n",
     "        out = out.view(batch_size, -1, self.output_size)\n",
     "        out = out[:, -1]\n",
+    "        \n",
     "        \n",
     "        return out, hidden\n",
     "    \n",
@@ -646,7 +662,7 @@
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
     "\"\"\"\n",
-    "tests.test_rnn(RNN, train_on_gpu)"
+    "# tests.test_rnn(RNN, train_on_gpu)"
    ]
   },
   {
@@ -667,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -716,6 +732,8 @@
     "    loss = criterion (y_hat, y)\n",
     "    loss.backward ()\n",
     "    \n",
+    "    # nn.utils.clip_grad_value_(rnn.parameters(), 5)\n",
+    "    \n",
     "    optimizer.step()\n",
     "    \n",
     "    \n",
@@ -748,7 +766,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scheduler for learning rate decay\n",
+    "from torch.optim.lr_scheduler import StepLR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,6 +801,7 @@
     "        \n",
     "        # initialize hidden state\n",
     "        hidden = rnn.init_hidden(batch_size)\n",
+    "        scheduler.step()\n",
     "        \n",
     "        for batch_i, (inputs, labels) in enumerate(train_loader, 1):\n",
     "            \n",
@@ -781,8 +817,8 @@
     "\n",
     "            # printing loss stats\n",
     "            if batch_i % show_every_n_batches == 0:\n",
-    "                print('Epoch: {:>4}/{:<4}  Loss: {}\\n'.format(\n",
-    "                    epoch_i, n_epochs, np.average(batch_losses)))\n",
+    "                print('Epoch: {:>4}/{:<4}  Loss: {}  Learning Rate: {}\\n'.format(\n",
+    "                    epoch_i, n_epochs, np.average(batch_losses),scheduler.get_lr()))\n",
     "                batch_losses = []\n",
     "\n",
     "    # returns a trained rnn\n",
@@ -828,20 +864,21 @@
     "    1. Stopped at 4/10 epochs, LOSS ~= 4.5\n",
     "5. __n_seq=16 , n_batch=64, epochs=10, lr=0.001, n_vocab=n_output=len(vocab), n_embed=200, n_hidden=100, n_layers=2__ \n",
     "    1. Stopped at 3/10 epochs, LOSS ~= 4.2\n",
-    "6. __n_seq=8 , n_batch=32, epochs=10, lr=0.005, n_vocab=n_output=len(vocab), n_embed=200, n_hidden=200, n_layers=2__    "
+    "6. __n_seq=8 , n_batch=32, epochs=10, lr=0.005, n_vocab=n_output=len(vocab), n_embed=200, n_hidden=200, n_layers=2__\n",
+    "    1. Stopped at 3/10 epochs, LOSS ~= 4.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
-    "sequence_length = 8 # of words in a sequence\n",
+    "sequence_length = 12 # of words in a sequence\n",
     "# Batch Size\n",
-    "batch_size = 32\n",
+    "batch_size = 48\n",
     "\n",
     "# data loader - do not change\n",
     "train_loader = batch_data(int_text, sequence_length, batch_size)"
@@ -849,15 +886,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training parameters\n",
     "# Number of Epochs\n",
-    "num_epochs = 10\n",
+    "num_epochs = 3\n",
     "# Learning Rate\n",
-    "learning_rate = 0.005 \n",
+    "learning_rate = 0.01 \n",
     "\n",
     "# Model parameters\n",
     "# Vocab size\n",
@@ -865,14 +902,14 @@
     "# Output size\n",
     "output_size = vocab_size\n",
     "# Embedding Dimension\n",
-    "embedding_dim = 300\n",
+    "embedding_dim = 400\n",
     "# Hidden Dimension\n",
-    "hidden_dim = 200\n",
+    "hidden_dim = 100\n",
     "# Number of RNN Layers\n",
     "n_layers = 2\n",
     "\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 5000"
+    "show_every_n_batches = 1000"
    ]
   },
   {
@@ -888,30 +925,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training for 10 epoch(s)...\n",
-      "Epoch:    1/10    Loss: 5.092236688137055\n",
-      "\n",
-      "Epoch:    1/10    Loss: 4.9064639373779295\n",
-      "\n",
-      "Epoch:    1/10    Loss: 4.8814420896530155\n",
-      "\n",
-      "Epoch:    1/10    Loss: 4.889260320854187\n",
-      "\n",
-      "Epoch:    1/10    Loss: 4.877668481779098\n",
-      "\n",
-      "Epoch:    2/10    Loss: 4.843870157999966\n",
-      "\n",
-      "Epoch:    2/10    Loss: 4.831747065782547\n",
-      "\n",
-      "Epoch:    2/10    Loss: 4.857559911727905\n",
-      "\n"
+      "Training for 3 epoch(s)...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'int' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-d05b00e84db6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# training the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mtrained_rnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_rnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_every_n_batches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m# saving the trained model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-60-9fb7bfd88d3a>\u001b[0m in \u001b[0;36mtrain_rnn\u001b[0;34m(rnn, batch_size, optimizer, criterion, n_epochs, show_every_n_batches)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;31m# forward, back prop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mforward_back_prop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m             \u001b[0;31m# record loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0mbatch_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-58-7f38796f1253>\u001b[0m in \u001b[0;36mforward_back_prop\u001b[0;34m(rnn, optimizer, criterion, inp, target, hidden)\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;31m# running through standard\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0my_hat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrnn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my_hat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    489\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    490\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 491\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    492\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    493\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-57-b5aa156ffc27>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, nn_input, hidden)\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclipper\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad_clip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad_clip\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m# return one batch of output word scores and the hidden state\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'int' and 'NoneType'"
      ]
     }
    ],
@@ -928,6 +964,7 @@
     "# defining loss and optimization functions for training\n",
     "optimizer = torch.optim.Adam(rnn.parameters(), lr=learning_rate)\n",
     "criterion = nn.CrossEntropyLoss()\n",
+    "scheduler = StepLR(optimizer, step_size=1, gamma=0.5) \n",
     "\n",
     "# training the model\n",
     "trained_rnn = train_rnn(rnn, batch_size, optimizer, criterion, num_epochs, show_every_n_batches)\n",
@@ -935,6 +972,27 @@
     "# saving the trained model\n",
     "helper.save_model('./save/trained_rnn', trained_rnn)\n",
     "print('Model Trained and Saved')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'trained_rnn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-eef7fe37e837>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrained_rnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'trained_rnn' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "trained_rnn.parameters()"
    ]
   },
   {
