--- a/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
+++ b/Udacity/TV Script Generation LSTM/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +451,19 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 5])\n",
-      "tensor([[ 10,  11,  12,  13,  14],\n",
-      "        [ 20,  21,  22,  23,  24],\n",
+      "tensor([[ 14,  15,  16,  17,  18],\n",
       "        [ 30,  31,  32,  33,  34],\n",
-      "        [  0,   1,   2,   3,   4],\n",
-      "        [ 22,  23,  24,  25,  26],\n",
-      "        [ 26,  27,  28,  29,  30],\n",
-      "        [ 33,  34,  35,  36,  37],\n",
-      "        [ 12,  13,  14,  15,  16],\n",
-      "        [ 23,  24,  25,  26,  27],\n",
-      "        [ 39,  40,  41,  42,  43]])\n",
+      "        [ 42,  43,  44,  45,  46],\n",
+      "        [ 39,  40,  41,  42,  43],\n",
+      "        [ 31,  32,  33,  34,  35],\n",
+      "        [ 41,  42,  43,  44,  45],\n",
+      "        [ 43,  44,  45,  46,  47],\n",
+      "        [ 11,  12,  13,  14,  15],\n",
+      "        [ 18,  19,  20,  21,  22],\n",
+      "        [ 38,  39,  40,  41,  42]])\n",
       "\n",
       "torch.Size([10])\n",
-      "tensor([ 15,  25,  35,   5,  27,  31,  38,  17,  28,  44])\n"
+      "tensor([ 19,  35,  47,  44,  36,  46,  48,  16,  23,  43])\n"
      ]
     }
    ],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -969,38 +969,53 @@
      "output_type": "stream",
      "text": [
       "Training for 16 epoch(s)...\n",
-      "Epoch:    1/16    Loss: 4.524955042898655  Learning Rate: [0.001]\n",
+      "Epoch:    1/16    Loss: 4.525107103526592  Learning Rate: [0.001]\n",
       "\n",
-      "Epoch:    2/16    Loss: 4.116839692458493  Learning Rate: [0.001]\n",
+      "Epoch:    2/16    Loss: 4.117357342579882  Learning Rate: [0.001]\n",
       "\n",
-      "Epoch:    3/16    Loss: 3.9770087152206255  Learning Rate: [0.001]\n",
+      "Epoch:    3/16    Loss: 3.9690962036222595  Learning Rate: [0.001]\n",
       "\n",
-      "Epoch:    4/16    Loss: 3.8929154563579713  Learning Rate: [0.001]\n",
+      "Epoch:    4/16    Loss: 3.886940273707551  Learning Rate: [0.001]\n",
       "\n",
-      "Epoch:    5/16    Loss: 3.79450357887556  Learning Rate: [0.0005]\n",
+      "Epoch:    5/16    Loss: 3.801521691847614  Learning Rate: [0.0005]\n",
       "\n",
-      "Epoch:    6/16    Loss: 3.7078902512686125  Learning Rate: [0.0005]\n",
+      "Epoch:    6/16    Loss: 3.7031749106096754  Learning Rate: [0.0005]\n",
       "\n",
-      "Epoch:    7/16    Loss: 3.6639228893612885  Learning Rate: [0.0005]\n",
+      "Epoch:    7/16    Loss: 3.665294151252775  Learning Rate: [0.0005]\n",
       "\n",
-      "Epoch:    8/16    Loss: 3.630513019252453  Learning Rate: [0.0005]\n",
+      "Epoch:    8/16    Loss: 3.6269702181202947  Learning Rate: [0.0005]\n",
       "\n",
-      "Epoch:    9/16    Loss: 3.5756138491644243  Learning Rate: [0.00025]\n",
+      "Epoch:    9/16    Loss: 3.571590266223616  Learning Rate: [0.00025]\n",
       "\n",
-      "Epoch:   10/16    Loss: 3.5190734683646125  Learning Rate: [0.00025]\n",
+      "Epoch:   10/16    Loss: 3.5155940565668757  Learning Rate: [0.00025]\n",
       "\n",
-      "Epoch:   11/16    Loss: 3.4876255302697454  Learning Rate: [0.00025]\n",
+      "Epoch:   11/16    Loss: 3.4932818772735335  Learning Rate: [0.00025]\n",
       "\n",
-      "Epoch:   12/16    Loss: 3.470285617696158  Learning Rate: [0.00025]\n",
+      "Epoch:   12/16    Loss: 3.4675831009476656  Learning Rate: [0.00025]\n",
       "\n",
-      "Epoch:   13/16    Loss: 3.435786316986062  Learning Rate: [0.000125]\n",
+      "Epoch:   13/16    Loss: 3.4353122073733573  Learning Rate: [0.000125]\n",
       "\n",
-      "Epoch:   14/16    Loss: 3.4064418308770477  Learning Rate: [0.000125]\n",
+      "Epoch:   14/16    Loss: 3.4003624098309144  Learning Rate: [0.000125]\n",
       "\n",
-      "Epoch:   15/16    Loss: 3.3910980144885596  Learning Rate: [0.000125]\n",
+      "Epoch:   15/16    Loss: 3.3878012866500327  Learning Rate: [0.000125]\n",
       "\n",
-      "Epoch:   16/16    Loss: 3.3769778541869875  Learning Rate: [0.000125]\n",
+      "Epoch:   16/16    Loss: 3.3750104817949946  Learning Rate: [0.000125]\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/torch/serialization.py:193: UserWarning: Couldn't retrieve source code for container of type RNN. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Trained and Saved\n"
      ]
     }
    ],
@@ -1046,7 +1061,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** (Write answer, here)"
+    "**Answer:** \n",
+    "\n",
+    "### Summary:\n",
+    "\n",
+    "I babysat the model, running about up-to three epochs per hyperparamter change and recorded the results. Given the limited GPU time I didn't think running a grid search would have been feasible. Please see the records above in the __Trial and error records__.\n",
+    "\n",
+    "### Observations\n",
+    "\n",
+    "1. The hyper-parameters (HPs) that really helped with loss was increasing hidden dimension size, and in order to squeeze into under 3.50 the learning rate decay. I noticed within a couple runs, that after 4 epochs there was significant bouncing around of the loss.\n",
+    "2. Other HPs that helped were the sequence length and batch size. Longer sequence length seemed to be better, though I would assume this is only because this is single direction LSTM. The attention model following would probably be a better approach with shorter sequence length with more future context.\n",
+    "3. Increasing embedding dimensions also helped but only to a point.\n",
+    "4. Suprisingly increasing LSTM layers seemed to increase the loss, though I'm not sure why. I'm assuming it's remembering the \"wrong\" things.\n",
+    "5. I also implemented a clamp, which I read from outside reading as well as from github projects. This is to help with the exploding gradient problem.\n",
+    "\n",
+    "### Produced Script\n",
+    "\n",
+    "1. I was amused by the script, and though it seemed \"Seinfeld\" enough. It was interesting that the model was able to include newman in the conversation.\n",
+    "2. There seemed to be an over abundance of \"hey\". I'm not sure if this occured more during elaine driven scenes more or if the clamp I had introduced limited it to their most common phrase as a group.\n",
+    "\n",
+    "### Attributions\n",
+    "\n",
+    "The following are blogs, papers, github where I got ideas and help for implementation.\n",
+    "\n",
+    "* https://github.com/yunjey/pytorch-tutorial/blob/master/tutorials/02-intermediate/language_model/main.py\n",
+    "* https://hackernoon.com/gradient-clipping-57f04f0adae\n",
+    "* https://pytorch.org/docs/stable/_modules/torch/nn/utils/clip_grad.html\n",
+    "* https://www.reddit.com/r/MachineLearning/comments/3x6cnn/intuition_for_rnn_learning_rate/\n",
+    "* https://skymind.ai/wiki/lstm\n",
+    "* https://danijar.com/tips-for-training-recurrent-neural-networks/ <- Particulary helpful.\n",
+    "* https://discuss.pytorch.org/t/implement-cell-gradient-clamp-in-nn-lstm/14135/3\n",
+    "* https://discuss.pytorch.org/t/proper-way-to-do-gradient-clipping/191\n",
+    "* https://pytorch.org/docs/stable/_modules/torch/nn/utils/clip_grad.html <- Clamp\n",
+    "* https://discuss.pytorch.org/t/adaptive-learning-rate/320\n",
+    "* https://pytorch.org/docs/stable/optim.html <- Scheduler\n",
+    "* https://machinelearningmastery.com/tune-lstm-hyperparameters-keras-time-series-forecasting/ <- Blog generally helpful"
    ]
   },
   {
@@ -1061,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,10 +1138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -1181,15 +1228,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/ipykernel_launcher.py:68: UserWarning: RNN module weights are not part of single contiguous chunk of memory. This means they need to be compacted at every call, possibly greatly increasing memory usage. To compact weights again call flatten_parameters().\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elaine:.\n",
+      "\n",
+      "george: oh, yeah..(laughs, but the guy walks into the bathroom, he walks over the kitchen and starts eating)\n",
+      "\n",
+      "elaine: i don't know, i think it's so much better.\n",
+      "\n",
+      "kramer: well what is it?\n",
+      "\n",
+      "elaine:(smiling) i can't. it's not that stupid.\n",
+      "\n",
+      "george:(to the woman) hey!\n",
+      "\n",
+      "newman: hey!\n",
+      "\n",
+      "kramer: hey!\n",
+      "\n",
+      "jerry: hey\n",
+      "\n",
+      "george: hey.\n",
+      "\n",
+      "jerry: hey, hey.\n",
+      "\n",
+      "elaine: hey. hey.\n",
+      "\n",
+      "kramer: hey.\n",
+      "\n",
+      "jerry: hey.\n",
+      "\n",
+      "kramer: oh yeah. yeah. well...\n",
+      "\n",
+      "elaine: well, i don't know. i mean, it's a little thing, i just don't think you can get me some business.\n",
+      "\n",
+      "jerry: well i can't get the ticket. i can't go to a doctor with you and me.\n",
+      "\n",
+      "kramer: well, what do you want?\n",
+      "\n",
+      "elaine: you can't do that.\n",
+      "\n",
+      "jerry: what are you talking about?\n",
+      "\n",
+      "kramer:(to the waitress) yeah.\n",
+      "\n",
+      "george: i can't get this.\n",
+      "\n",
+      "jerry: well, you know i really don't want to go to the bathroom.\n",
+      "\n",
+      "kramer: yeah, that's right.\n",
+      "\n",
+      "jerry: i know.\n",
+      "\n",
+      "elaine: i mean, you know i really need you to go back to the airport.\n",
+      "\n",
+      "george:(to jerry) hey, i was thinking...(jerry looks at her watch) well, you know, i don't know, i think i can. i have to get to work.\n",
+      "\n",
+      "kramer: well, i know what it means.\n",
+      "\n",
+      "jerry: what about the drake?\n",
+      "\n",
+      "kramer: well, i'm going to get out of here and i don't know how to make it.\n",
+      "\n",
+      "jerry: i know, i know...\n",
+      "\n",
+      "kramer:(to jerry) hey, hey. hey, hey, hey, hey.\n",
+      "\n",
+      "jerry: hey.\n",
+      "\n",
+      "elaine: hey.\n",
+      "\n",
+      "jerry:\n"
+     ]
+    }
+   ],
    "source": [
     "# run the cell multiple times to get different results!\n",
     "gen_length = 400 # modify the length to your preference\n",
-    "prime_word = 'jerry' # name for starting the script\n",
+    "prime_word = 'elaine' # name for starting the script\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -1210,10 +1338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# save script to a text file\n",
