Update : Udacity : Sagemaker ipynb

--- a/Udacity/SageMaker incl NN Sentiment Analysis/Project/SageMaker Project.ipynb
+++ b/Udacity/SageMaker incl NN Sentiment Analysis/Project/SageMaker Project.ipynb
@@ -224,7 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Apply review_to_words to a review (train_X[100] or any other review)\n"
+    "# TODO: Apply review_to_words to a review (train_X[100] or any other review)\n",
+    "review_to_words(train_X[100])"
    ]
   },
   {
@@ -385,7 +386,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Use this space to determine the five most frequently appearing words in the training set."
+    "# TODO: Use this space to determine the five most frequently appearing words in the training set.\n",
+    "word_counts = Counter(np.concatenate( train_X, axis=0 ))\n",
+    "sorted_words = sorted(word_counts, key=word_counts.get, reverse=True)\n",
+    "print(sorted_words[0:5])\n",
+    "# print(word_counts['film'])"
    ]
   },
   {
@@ -482,7 +487,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use this cell to examine one of the processed reviews to make sure everything is working as intended."
+    "# Use this cell to examine one of the processed reviews to make sure everything is working as intended.\n",
+    "# print(len(train_X[0]))\n"
    ]
   },
   {
@@ -649,6 +655,12 @@
     "            batch_y = batch_y.to(device)\n",
     "            \n",
     "            # TODO: Complete this train method to train the model provided.\n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "            output = model(batch_X)\n",
+    "            loss = loss_fn(output, batch_y)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "            \n",
     "            total_loss += loss.data.item()\n",
     "        print(\"Epoch: {}, BCELoss: {}\".format(epoch, total_loss / len(train_loader)))"
@@ -758,7 +770,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Deploy the trained model"
+    "# TODO: Deploy the trained model\n",
+    "\n",
+    "predictor = estimator.deploy(initial_instance_count=1, instance_type='ml.p2.xlarge')"
    ]
   },
   {
@@ -870,7 +884,18 @@
    "outputs": [],
    "source": [
     "# TODO: Convert test_review into a form usable by the model and save the results in test_data\n",
-    "test_data = None"
+    "test_data = None\n",
+    "\n",
+    "data_X = None\n",
+    "data_len = None\n",
+    "\n",
+    "input_data_words = review_to_words(test_review)\n",
+    "data_X, data_len = convert_and_pad_data(word_dict, input_data_words)\n",
+    "data_pack = np.column_stack((data_len, data_X))\n",
+    "data_pack = data_pack.reshape(1, -1)\n",
+    "\n",
+    "data = torch.from_numpy(data_pack)\n",
+    "data = data.to(device)"
    ]
   },
   {
@@ -1253,9 +1278,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1267,7 +1292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
